--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     , "mime": ">= 1.2.4"
     , "supervisor": ">= 0.3.0"
     , "connect-redis": ">= 1.2.0"
+    , "mongoose-types": ">= 1.0.3"
+    , "mongoose-types": ">= 1.0.3"
+    , "mongoose-auth": ">= 0.0.11"
+    , "bcrypt": ">= 0.5.0"
   }
 }
